# at-protocol

./: Cargo.toml  LICENSE  README.md  TODO.md
abnf-rs/: Cargo.toml  abnf.abnf
abnf-rs/src/: lib.rs  parser.rs
at-proto-codegen-client/: Cargo.toml
at-proto-codegen-client/src/: lexicon_doc.rs  main.rs
at-proto-codegen-client/src/lexicon_doc/: io.rs
at-proto-codegen-client/src/writer/: operation.rs
design/: glossary.md
did-placeholder/: Cargo.toml
did-placeholder/src/: cid.rs  did_key.rs  document.rs  lib.rs  operation.rs
did-placeholder/src/operation/: create.rs  rotate_recovery_key.rs  rotate_signing_key.rs  update_atp_pds.rs  update_username.rs
rust-code-writer/: Cargo.toml
rust-code-writer/src/: dependency.rs  lib.rs  metadata.rs  module.rs  tree.rs
xrpc/: Cargo.toml
xrpc/example/: README.md
xrpc/example/client/: Cargo.toml
xrpc/example/pds/: Cargo.toml
xrpc/example/server/: Cargo.toml
xrpc/src/: lib.rs  nsid.rs  parameter.rs  request.rs
