[package]
name = "abnf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
once_cell = "1.16.0"
pretty_assertions = "1.3.0"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
