[package]
name = "did-placeholder"
description = "A Rust implementation of https://atproto.com/specs/did-plc"
version = "0.1.0"
edition = "2021"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abnf = "0.13.0"
axum = "0.5.17"
base32 = "0.4.0"
hex = "0.4.3"
once_cell = "1.16.0"
regex = "1.7.0"
serde = "1.0.147"
sha2 = "0.10.6"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
