[package]
name = "xrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
http = ["dep:http"]
serde_json = ["dep:serde_json"]

[dependencies]
http = { version = "0.2.8", optional = true }
serde_json = { version = "1.0.87", optional = true }
thiserror = "1.0.37"
